# graphics-with-modern-opengl

./: CMakeLists.txt  README.md
include/: camera.hpp  mesh.hpp  opengl_app.hpp  shader.hpp  window.hpp
resources/: shader.vs
src/: camera.cpp  main.cpp  mesh.cpp  opengl_app.cpp  shader.cpp  window.cpp
test/: app.cpp
